# py-package

./: README.md  pyproject.toml
.github/workflows/: compile.yml
distributions/: __init__.py  continuous.py
presentation/: main.typ  tamburlaine.typ
